--- a/kezilabda.html
+++ b/kezilabda.html
@@ -10,6 +10,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container fluid">
+        <div class="row">
+            <ul class="nav"> 
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.csany-zeg.hu/">Csány weboldal</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="https://hu-hu.facebook.com/">Irány a facebook</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="https://www.w3schools.com/bootstrap5/bootstrap_navbar.php">W3school Bootstrap</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#">Link 3</a>
+
+                </li>
+
+            </ul>
+
+        </div>
+
+    </div>
     
 </body>
 </html>
