--- a/Kezilabda/kézilabda.html
+++ b/Kezilabda/kézilabda.html
@@ -21,7 +21,7 @@
               <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" href="Mark.html">Legördülő</a>
+                    <a class="nav-link" href="Mark.html">Legördülő menő</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="Gyurex.html">Függő menü</a>
@@ -31,10 +31,8 @@
                   </li>    
                 </ul>
               </div>
-            </div>
+            </div>          
           </nav>
-          
-          
 
 
     </div>
