--- a/Kezilabda/kézilabda.html
+++ b/Kezilabda/kézilabda.html
@@ -21,13 +21,13 @@
               <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" href="Mark.html">Legördülő menő</a>
+                    <a class="nav-link" href="Mark.html">Márk</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="Gyurex.html">Függő menü</a>
+                    <a class="nav-link" href="Gyuri.html">Gyuri</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="Levi.html">Folyt.köv.</a>
+                    <a class="nav-link" href="Levi.html">Levi</a>
                   </li>    
                 </ul>
               </div>
