--- a/Kezilabda/kézilabda.html
+++ b/Kezilabda/kézilabda.html
@@ -27,8 +27,17 @@
                     <a class="nav-link" href="Gyuri.html">Gyuri</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="Levi.html">Levi</a>
+                    <a class="nav-link" href="Gyuri2.html">Gyuri2</a>
                   </li>    
+                  <li class="nav-item">
+                    <a class="nav-link" href="Levi.html">Levi</a>
+                  </li>  
+                  <li class="nav-item">
+                    <a class="nav-link" href="Levi.html">Levi2</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="Mark1.html">Mark2</a>
+                  </li>          
                 </ul>
               </div>
             </div>          
