--- a/Kezilabda/Gyuri2.html
+++ b/Kezilabda/Gyuri2.html
@@ -33,6 +33,9 @@
               </div>
             </div>          
           </nav>
+          <p>A rendes játékidő minden korosztályban (16 év felett) 2x30 perc, a félidei szünet 10 perc. Fiatalabb korosztályú csapatok esetében 8 - 12 év között a rendes játékidő 2x20 perc, 12 - 16 év között pedig 2x25 perc, mindkét esetben 10 perc szünettel. A félidei szünetek hossza Magyarországon a nemzeti bajnokságban és a kupamérkőzéseken 10 perc, nemzetközi mérkőzéseken ettől eltérhetnek, általában 15 perc.
+
+            A kézilabdában egy sajátos módszert követve mérik a játékidőt. A játékidő a játékmegszakítások (pl. szabálytalanság megítélése, gól utáni középkezdés stb.) alatt is megy, azonban ha a játék várhatóan hosszabb ideig szakad meg (pl. sérülést követő ápolás miatt), akkor a játékvezetőknek lehetőségük van az órát erre az időszakra megáll</p>
 
 
     </div>
