--- a/Kezilabda/Levi.html
+++ b/Kezilabda/Levi.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="container">
-        <p class="text-center">Vízszíntes navigátor bár</p>
+        <p class="text-center">Kézilabda</p>
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="index.html"><img src="kezilabda_2.jpg" alt="Kézilabda" style="width:40px;" class="rounded-pill"> </a>
@@ -50,7 +50,7 @@
     <br>
     <div class="row container ">
         <div class="col-7">
-            <h3>A kézilabda-csapat</h3>
+            <h3 id="levih3">A kézilabda-csapat</h3>
         </div>
         <div class="col-5">
             <img src="letöltés.jfif" alt="">
