--- a/Kezilabda/Mark.html
+++ b/Kezilabda/Mark.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="hu">
 <head>
+  <!--Lákovics Márk-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A kézilabda története</title>
+    <title> Lákovics Márk </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="style.css">
@@ -34,15 +35,22 @@
             </div>          
           </nav>
 
-
     </div>
-    <div class="row container">
+    <div class="container">
+      <div class="row">
         <p>
             A kézilabdázás alapmozgásai futás, ugrás, cselezés, dobás , mint a létfenntartás eszközei, az emberré válással párhuzamosan indultak fejlődésnek. Az 1800-as évek végén és az 1900-as évek elején a torna volt a kor domináns sportága. Új mozgásforma kellett, amely szakít a torna kötött szabályaival, élvezetes, szórakoztató, nők is játszhatják, illetve a túlságosan eldurvult labdarúgásnál és rögbinél finomabb.
         </p>
+      </div>
+      <div class="row">
             <p>
             Hozzávetőlegesen a századforduló környékén három, egymáshoz meglehetősen hasonló játék fejlődött ki:
             </p>
+            <li class="text-left">haandbold</li>
+            <li class="text-left">torball</li>
+            <li class="text-left">hazena</li>
+            <img id="kép" src="kézilabdatörténet.jpg" alt="">
+          </div>
     </div>
 </body>
 </html>
