--- a/Kezilabda/kézilabda.html
+++ b/Kezilabda/kézilabda.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="Gyuri2.html">Gyuri2</a>
                   </li>    
                   <li class="nav-item">
-                    <a class="nav-link" href="Levi.html">Levi</a>
+                    <a class="nav-link" href="Levi.html">Kézilabda csapat</a>
                   </li>  
                   <li class="nav-item">
                     <a class="nav-link" href="Levi.html">Levi2</a>
