--- a/Kezilabda/Levi.html
+++ b/Kezilabda/Levi.html
@@ -52,9 +52,9 @@
     <div class="container">
       <div class="row">
         <div class="text-center">
-            <h3>A kézilabda-csapat</h3>
+            <h1>A kézilabda-csapat</h1>
             <br>
-            <p><dt>Mezőnyjátékosok</dt></p>
+            <h3><dt>Mezőnyjátékosok</dt></h3>
             <p>A csapat mezőnyjátékosainak egységes öltözéket kell viselniük, amelynek megjelenése az ellenféltől világosan el kell különüljön. A játékosok nem viselhetnek olyan tárgyat magukon, ami veszélyezteti a saját vagy játékostársaik testi épségét.
 
               A mezőnyjátékos kézzel, karral, fejjel, törzzsel, combbal és térddel érhet a labdába, a labdát ilyen módszerekkel is csak legfeljebb három másodpercig érintheti. Labdával a kézben maximum három lépést lehet megtenni.
@@ -99,6 +99,14 @@
         <li>védekezéskor: posztján középső védő</li>
       </div>
       
+      </div>
+      <br>
+      <br>
+      <div class="row text-center">
+        <h3><dt>Kapusok</dt></h3>
+        <br>
+        <p>A kapus a saját kapujának előterében korlátlanul mozoghat, akár a labdával is, figyelmen kívül hagyva a mezőnyjátékosokra érvényes lépésszabályt. A kapus a kapuelőtérben védekezés céljából bármely testrészével érintheti a labdát, azonban eközben nem veszélyeztetheti az ellenfelet. A kapuelőteret elhagyva viszont a mezőnyjátékosokra vonatkozó szabályok érvényesek rá is. A hatos vonalon kívül nem ütközhet az ellenfél játékosával, különben piros lappal kizárják, azaz a mérkőzés hátralévő idejében nem léphet már pályára.</p>
+
       </div>
       <br>
       <br>
