--- a/Kezilabda/Levi.html
+++ b/Kezilabda/Levi.html
@@ -49,7 +49,7 @@
     </div>
     <br>
     <br>
-    <div class="container">
+    <div id="container" class="container">
       <div class="row">
         <div class="text-center">
             <h1>A kézilabda-csapat</h1>
@@ -62,6 +62,7 @@
               Nem szabad a labdát a saját csapat birtokában tartani a támadási akciók felismerhetősége nélkül, illetve kapura lövési kísérlet elmulasztásával. Ez passzív játéknak minősül. A játékvezető, miután felismerte ezt a jelenséget, figyelmeztetésképpen felemeli az egyik kezét, és ha ezután sem változik a támadás intenzitása, nincs kapura lövési kísérlet, akkor a labdát birtokló csapat ellen szabaddobást ítél. Főként ez a szabály teszi ezt a sportágat gyorssá és látványossá, nem engedélyezve egyik csapatnak sem, hogy feladja a gólszerzésre irányuló törekvését.</p>
         </div>
       </div>
+      <br>
       <div class="row">
         <div class="col-4">
           <img id="levikep" src="letöltés.jfif" alt="">
@@ -103,13 +104,18 @@
       <br>
       <br>
       <div class="row text-center">
+        <div class="col-8">
         <h3><dt>Kapusok</dt></h3>
         <br>
         <p>A kapus a saját kapujának előterében korlátlanul mozoghat, akár a labdával is, figyelmen kívül hagyva a mezőnyjátékosokra érvényes lépésszabályt. A kapus a kapuelőtérben védekezés céljából bármely testrészével érintheti a labdát, azonban eközben nem veszélyeztetheti az ellenfelet. A kapuelőteret elhagyva viszont a mezőnyjátékosokra vonatkozó szabályok érvényesek rá is. A hatos vonalon kívül nem ütközhet az ellenfél játékosával, különben piros lappal kizárják, azaz a mérkőzés hátralévő idejében nem léphet már pályára.</p>
-
+        </div>
+        <div class="col-4">
+          <img id="levikep" src="betti11jpg.jpg" alt="">
+        </div>
       </div>
       <br>
       <br>
+
     </div>
     
 </body>
