--- a/Kezilabda/Mark.html
+++ b/Kezilabda/Mark.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="hu">
 <head>
@@ -38,19 +39,31 @@
     </div>
     <div class="container">
       <div class="row">
-        <p>
+        <p id="m">
             A kézilabdázás alapmozgásai futás, ugrás, cselezés, dobás , mint a létfenntartás eszközei, az emberré válással párhuzamosan indultak fejlődésnek. Az 1800-as évek végén és az 1900-as évek elején a torna volt a kor domináns sportága. Új mozgásforma kellett, amely szakít a torna kötött szabályaival, élvezetes, szórakoztató, nők is játszhatják, illetve a túlságosan eldurvult labdarúgásnál és rögbinél finomabb.
         </p>
       </div>
       <div class="row">
-            <p>
+            <p id="m">
             Hozzávetőlegesen a századforduló környékén három, egymáshoz meglehetősen hasonló játék fejlődött ki:
             </p>
+          </div>
+          <div class="row">
+            <div class="col-8">
             <li class="text-left">haandbold</li>
             <li class="text-left">torball</li>
             <li class="text-left">hazena</li>
+            <br>
+            <p id="m" >Ezek a játékok a mai kézilabdázás közvetlen elődjeinek tekinthetőek.</p>
+           <h3>Haandbold</h3> 
+            <p id="m">A játék alapötlete Holger Nielson dán iskolamester nevéhez fűződik, aki a túl sok betört ablakot okozó futball helyett igyekezett tanítványai számára egy másik labdajátékot kitalálni. A labda pontosabb továbbítására ezért a lábuk helyett a kezüket kezdték el használni a játékosok, és a kezdeti kísérletezés olyan sikeresnek bizonyult, hogy az új játék hamarosan teret hódított Dániában</p>
+
+          </div>
+          <div class="col-4">
             <img id="kép" src="kézilabdatörténet.jpg" alt="">
           </div>
+          </div>
+    
     </div>
 </body>
 </html>
