--- a/Kezilabda/Gyuri2.html
+++ b/Kezilabda/Gyuri2.html
@@ -15,7 +15,7 @@
   <div class="container">
    
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <div class="container-fluid">
+        <div id="container" class="container-fluid">
           <a class="navbar-brand" href="index.html"><img src="kezilabda_2.jpg" alt="Kézilabda" style="width:40px;" class="rounded-pill"> </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -69,6 +69,11 @@
              <div class="row">
               <h3>A játékidő</h3>
               <p>A rendes játékidő minden korosztályban (16 év felett) 2x30 perc, a félidei szünet 10 perc. Fiatalabb korosztályú csapatok esetében 8 - 12 év között a rendes játékidő 2x20 perc, 12 - 16 év között pedig 2x25 perc, mindkét esetben 10 perc szünettel. A félidei szünetek hossza Magyarországon a nemzeti bajnokságban és a kupamérkőzéseken 10 perc, nemzetközi mérkőzéseken ettől eltérhetnek, általában 15 perc.</p>
+             </div>
+             <div class="row">
+              <h3>Labda</h3>
+              <p>A kézilabdát bőr vagy műanyag borítású labdával játsszák, életkortól és nemtől függően eltérő méretű labdákkal:</p>
+              <img src="tablazat.png" alt="">
              </div>
             
     </div>
