--- a/Kezilabda/Mark.html
+++ b/Kezilabda/Mark.html
@@ -67,6 +67,8 @@
            <h3>Haandbold</h3> 
             <p id="m">A játék alapötlete Holger Nielson dán iskolamester nevéhez fűződik, aki a túl sok betört ablakot okozó futball helyett igyekezett tanítványai számára egy másik labdajátékot kitalálni. A labda pontosabb továbbítására ezért a lábuk helyett a kezüket kezdték el használni a játékosok, és a kezdeti kísérletezés olyan sikeresnek bizonyult, hogy az új játék hamarosan teret hódított Dániában</p>
 
+              <h3>Torball</h3>
+              <p id="m" > A játék egyik németországi úttörője az a Hermann Bachmann volt, akinek nevéhez a játék szabályainak összeállítása, majd a részletes leírása fűződik. A 40×20 méteres játéktéren, a 4 méter sugarú kapuelőtérrel űzött játék sok hasonlóságot mutat a mai kézilabdázással, és Németországban sok hódolót nyert meg a sportág ügyének.</p>
           </div>
           <div class="col-4">
             <img id="kép" src="kézilabdatörténet.jpg" alt="">
