--- a/Kezilabda/Mark.html
+++ b/Kezilabda/Mark.html
@@ -1,80 +1,115 @@
-
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
   <!--Lákovics Márk-->
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Lákovics Márk </title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title> Lákovics Márk </title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div class="container">
-        <h1 class="text-center">A kézilabda története</h1>
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="index.html"><img src="kezilabda_2.jpg" alt="Kézilabda" style="width:40px;" class="rounded-pill"> </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" href="Mark.html">Kézilabda történelme</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="Gyuri.html">Játék szabályok</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="Gyuri2.html">Alapszabályok</a>
-                  </li>    
-                  <li class="nav-item">
-                    <a class="nav-link" href="Levi.html">Kézilabda csapat</a>
-                  </li>  
-                  <li class="nav-item">
-                    <a class="nav-link" href="Levi.html">Levi2</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="Mark1.html">Kézilabda magyar történelme</a>
-                  </li>          
-                </ul>
-              </div>
-            </div>          
-          </nav>
-
-    </div>
-    <div class="container">
-      <div class="row">
-        <p id="m">
-            A kézilabdázás alapmozgásai futás, ugrás, cselezés, dobás , mint a létfenntartás eszközei, az emberré válással párhuzamosan indultak fejlődésnek. Az 1800-as évek végén és az 1900-as évek elején a torna volt a kor domináns sportága. Új mozgásforma kellett, amely szakít a torna kötött szabályaival, élvezetes, szórakoztató, nők is játszhatják, illetve a túlságosan eldurvult labdarúgásnál és rögbinél finomabb.
-        </p>
+  <div class="container">
+    <h1 class="text-center">A kézilabda története</h1>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html"><img src="kezilabda_2.jpg" alt="Kézilabda" style="width:40px;"
+            class="rounded-pill"> </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="Mark.html">Kézilabda történelme</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Gyuri.html">Játék szabályok</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Gyuri2.html">Alapszabályok</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Levi.html">Kézilabda csapat</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Levi.html">Levi2</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Mark1.html">Kézilabda magyar történelme</a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="row">
-            <p id="m">
-            Hozzávetőlegesen a századforduló környékén három, egymáshoz meglehetősen hasonló játék fejlődött ki:
-            </p>
-          </div>
-          <div class="row">
-            <div class="col-8">
-            <li class="text-left">haandbold</li>
-            <li class="text-left">torball</li>
-            <li class="text-left">hazena</li>
-            <br>
-            <p id="m" >Ezek a játékok a mai kézilabdázás közvetlen elődjeinek tekinthetőek.</p>
-           <h3>Haandbold</h3> 
-            <p id="m">A játék alapötlete Holger Nielson dán iskolamester nevéhez fűződik, aki a túl sok betört ablakot okozó futball helyett igyekezett tanítványai számára egy másik labdajátékot kitalálni. A labda pontosabb továbbítására ezért a lábuk helyett a kezüket kezdték el használni a játékosok, és a kezdeti kísérletezés olyan sikeresnek bizonyult, hogy az új játék hamarosan teret hódított Dániában</p>
+    </nav>
 
-              <h3>Torball</h3>
-              <p id="m" > A játék egyik németországi úttörője az a Hermann Bachmann volt, akinek nevéhez a játék szabályainak összeállítása, majd a részletes leírása fűződik. A 40×20 méteres játéktéren, a 4 méter sugarú kapuelőtérrel űzött játék sok hasonlóságot mutat a mai kézilabdázással, és Németországban sok hódolót nyert meg a sportág ügyének.</p>
-          </div>
-          <div class="col-4">
-            <img id="kép" src="kézilabdatörténet.jpg" alt="">
-          </div>
-          </div>
-    
+  </div>
+  <div class="container">
+    <div class="row">
+      <p id="m">
+        A kézilabdázás alapmozgásai futás, ugrás, cselezés, dobás , mint a létfenntartás eszközei, az emberré válással
+        párhuzamosan indultak fejlődésnek. Az 1800-as évek végén és az 1900-as évek elején a torna volt a kor domináns
+        sportága. Új mozgásforma kellett, amely szakít a torna kötött szabályaival, élvezetes, szórakoztató, nők is
+        játszhatják, illetve a túlságosan eldurvult labdarúgásnál és rögbinél finomabb.
+      </p>
     </div>
+    <div class="row">
+      <p id="m">
+        Hozzávetőlegesen a századforduló környékén három, egymáshoz meglehetősen hasonló játék fejlődött ki:
+      </p>
+    </div>
+    <div class="row">
+      <div class="col-8">
+        <li class="text-left">haandbold</li>
+        <li class="text-left">torball</li>
+        <li class="text-left">hazena</li>
+        <br>
+        <p id="m">Ezek a játékok a mai kézilabdázás közvetlen elődjeinek tekinthetőek.</p>
+
+        <h3>Haandbold</h3>
+        <p id="m">A játék alapötlete Holger Nielson dán iskolamester nevéhez fűződik, aki a túl sok betört ablakot okozó
+          futball helyett igyekezett tanítványai számára egy másik labdajátékot kitalálni. A labda pontosabb
+          továbbítására ezért a lábuk helyett a kezüket kezdték el használni a játékosok, és a kezdeti kísérletezés
+          olyan sikeresnek bizonyult, hogy az új játék hamarosan teret hódított Dániában</p>
+
+        <h3>Torball</h3>
+        <p id="m"> A játék egyik németországi úttörője az a Hermann Bachmann volt, akinek nevéhez a játék szabályainak
+          összeállítása, majd a részletes leírása fűződik. A 40×20 méteres játéktéren, a 4 méter sugarú kapuelőtérrel
+          űzött játék sok hasonlóságot mutat a mai kézilabdázással, és Németországban sok hódolót nyert meg a sportág
+          ügyének.</p>
+
+
+
+      </div>
+      <div class="col-4">
+        <img id="mkép" src="kézilabdatörténet.jpg" alt="">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-8">
+        <h3>Hazena</h3>
+        <p id="m">A Václav Karas és Antonin Kristof által megalkotott játék Prágában debütált először, a közvélemény
+          teljes megelégedésére. A pálya mérete (48×32 méter), a kapuelőtér alakja (6 méter sugarú félkörív), a kapu
+          mérete (2×2,4 méter) és a játékidő (2×25 perc) már sok hasonlóságot mutat a kézilabdázás mai paramétereivel. A
+          játékteret azonban három egyenlő harmadra osztották, behatárolva a hátvédek, a középpályások, illetve a
+          csatárok mozgáskörzetét, a kapusok pedig nem hagyhatták el saját kapuelőterüket.
+          Ez a három kezdetleges kézilabdajáték jelentős népszerűségre tett szert Európában, amit a tornák és mérkőzések
+          egyre növekvő száma is bizonyít. Mivel azonban mindhárom játékot különböző szabályok szerint játszották,
+          nagyobb szabású nemzetközi tornák szervezése állandóan akadályokba ütközött. Ezért szükségessé vált a
+          szabályok egyesítése, amelyet a német Karl Schelenz állalt fel, és az új játékszabályok 1917-ben, Berlinben
+          láttak napvilágot.</p>
+      </div>
+      <div class="col-4">
+        <img id="mkép" src="kézil.jpg" alt="">
+      </div>
+
+    </div>
+
+  </div>
 </body>
+
 </html>
