--- a/Kezilabda/Mark1.html
+++ b/Kezilabda/Mark1.html
@@ -1,34 +1,142 @@
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <!--Lákovics Márk-->
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lákovics Márk</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="Mark.html">Kézilabda történelme</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Gyuri.html">Játék szabályok</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Gyuri2.html">Alapszabályok</a>
-          </li>    
-          <li class="nav-item">
-            <a class="nav-link" href="Levi.html">Kézilabda csapat</a>
-          </li>  
-          <li class="nav-item">
-            <a class="nav-link" href="Levi.html">Levi2</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Mark1.html">Kézilabda magyar történelme</a>
-          </li>          
-        </ul>
+  <div class="container">
+    <h1 class="text-center">Kézilabda magyar történelme</h1>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html"><img src="kezilabda_2.jpg" alt="Kézilabda" style="width:40px;"
+            class="rounded-pill"> </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="Mark.html">Kézilabda történelme</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Gyuri.html">Játék szabályok</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Gyuri2.html">Alapszabályok</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Levi.html">Kézilabda csapat</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Levi.html">Levi2</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Mark1.html">Kézilabda magyar történelme</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    
+    </nav>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <p id="m">A kézilabda magyarországi történetét egy magyar atléta, Cséfay Sándor alapozta meg, aki egy európai túra
+        során figyelt fel a különös játékra. Az akkoriban még labdarúgópályán játszott játék egy életre rabjává tette.
+        Később 1933. március 30-án önálló szövetségként megalakult a Magyar Kézilabda Egyesületek Szövetsége. A magyar
+        férfi válogatott az 1936-os berlini olimpián szerepelt először, 1938-ban pedig világbajnoki bronzérmet szerzett.
+        Ez jelentősen növelte a sportág népszerűségét és elősegítette számos klub létrejöttét. A második világháború
+        jelentősen megtépázta a kézilabda sportot is, de az 1949-ben Budapesten megrendezett női nagypályás
+        világbajnokságon a magyar válogatott mégis aranyérmet szerzett. Ezt követően azonban Észak-Európából elindult
+        világhódító útjára a kisméretű pályán játszott kézilabda, melyet Magyarországon elsősorban szabadban, de Európa
+        nagy részén már teremben űztek. Ezzel megpecsételődött a nagypályás kézilabda sorsa.
+      </p>
+      <br>
+    </div>
+    <div class="row">
+      <div class="col-2">
+        <img src="magyarkézi.jpg" alt="">
+      </div>
+      <div class="col-10">
+        <p id="mark" class="text-center">A játék a kisméretű pálya révén felgyorsult, több gól született, a stratégia is
+          fontosabb szerepet kapott, mindezek együtt jelentősen növelték a sportág népszerűségét. Az 1950-es évekre a
+          Nemzetközi Kézilabda Szövetség (IHF) már sűrű programot bonyolított évente, ekkor indult ugyanis útjára a
+          világbajnokság, melyen elsősorban a nők szerepeltek sikeresebben, olyannyira, hogy 1957-ben ezüstérmet
+          nyertek, majd 1965-ben világbajnokok lettek Dortmundban. Ez idő tájt az IHF elindította a klubcsapatoknak
+          kiírt három európai kupát. A Bajnokok kupája, az IHF kupa, és a Kupagyőztesek Európa-kupája nagyot lendített a
+          játékosok technikai fejlődésén. Akkoriban a magyar csapatok közül a férfiaknál a Tatabánya, a Bp. Honvéd, a
+          Győr és a Debrecen, míg a nőknél az FTC, a Bp. Spartacus és a Vasas vívott ki magának nemzetközi hírnevet.</p>
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <div>
+        <p id="m"> 1972-ben elindult a sportág olimpiai története. Ezekben az években a magyar válogatottak rendszeresen
+          vettek részt a világbajnokságok döntőiben. Ez az időszak főként a hölgyekről szólt. 1977-ben az FTC női
+          csapata megnyerte a KEK-et. A nyolcvanas évekre már a férfiak is jobban szerepeltek, két olimpiai 4. helyet
+          szereztek, és a hölgyek is kiharcoltak egy 4. helyet. Az 1982-es, Magyarországon rendezett világbajnokságon a
+          nők, míg 1986-ban Svájcban a férfiak értek el második helyezést. Emellett 1982-ben férfiágon a Budapesti
+          Honvéd, a nőknél pedig a Vasas megnyerte a Bajnokok Kupáját.</p>
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-8">
+        <p id="mark" class="text-center">1991-ben megalakult az Európai Kézilabda-szövetség (EHF).[4] Ezekben az években
+          újra megindult a sportág fejlődése, olyannyira, hogy a második legnépszerűbb sportág lett az országban, és a
+          mérkőzéseket gyakran teltházas csarnokokban játszották. A női válogatott ebben az időben előbb egy
+          világbajnoki 2. helyet, majd egy olimpiai 3. helyet szerzett Laurencz László szövetségi kapitány irányítása
+          alatt. A Dunaferr női kézilabdacsapata 1995-ben megnyerte az EHF-kupagyőztesek Európa-kupáját, majd 1998-ban
+          az EHF kupát.</p>
+      </div>
+      <div class="col-4">
+        <img src="kupa.jpg" alt="">
+      </div>
+    </div>
+    <div class="row">
+      <div>
+        <p id="m">Az ezredfordulót Sydneyben egy olimpiai 2. hellyel és egy romániai Európa-bajnoki címmel ünnepelték a
+          lányok, Mocsai Lajos vezetésével. Ezekben az esztendőkben a női vonal újra magasra ívelt. A Dunaferr 1999-ben
+          megnyerte a Bajnokcsapatok Európa Kupáját és a szuperkupát, emellett a Debrecen elhódította az EHF-kupát,
+          amire a Cornexi csapata is képes volt 2005-ben. Az FTC 2002-ben játszott BEK-döntőt, míg 2006-ban megnyerte az
+          EHF-kupát. A Győri ETO kétszer is az EHF-kupa és a KEK döntőjében szerepelt, 2009-ben pedig a Bajnokok ligája
+          döntőjéig jutottak, majd 2013-ban megnyerték a Bajnokok ligáját, ezzel ők lettek Európa legjobb csapata. 2014
+          májusában jött a duplázás, így ismét az ETO lett Európa legjobbja. Férfi vonalon a Veszprém nyújtott
+          kimagaslót, csapata 2002-ben a Bajnokok ligájában döntőt játszott, majd 2014-ben a 4. helyig jutott, de meg
+          kell említeni a Dunaferr 2000-ben KEK-döntős csapatát is. 2008-ban az MKB Veszprémnek, míg 2011-ben és
+          2012-ben az FTC női csapatának sikerült elhódítania a KEK-trófeát. 2014-ben a Pick Szeged nyerte meg EHF
+          kupát.</p>
+      </div>
+    </div>
+    <br>
+    <div class="row text-center">
+      <h2 id="mark">Magyar női kézilabdacsapat</h2>
+    </div>
+    <div class="row">
+      <div class="text-center">
+        <img id="kép" src="nőivalogatott.jpg" alt="">
+      </div>
+    </div>
+    <br>
+    <div class="row text-center">
+      <h2 id="mark">Magyar férfi kézilabdacsapat</h2>
+    </div>
+    <div class="row">
+      <div id="mark" class="text-center">
+        <img id="kép" src="férfiválogatott.jpg" alt="">
+      </div>
+    </div>
+  </div>
+
 </body>
+
 </html>
