--- a/Projekt2/Mark1.html
+++ b/Projekt2/Mark1.html
@@ -14,7 +14,7 @@
    
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div  class="container-fluid">
-          <a class="navbar-brand" href="index.html"><img src="kezilabda_2.jpg" alt="Kézilabda" style="width:40px;" class="rounded-pill"> </a>
+          <a class="navbar-brand" href="index.html"><img src="" alt="" style="width:40px;" class="rounded-pill"> </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -27,10 +27,10 @@
                 <a class="nav-link" href="Gyuri.html">Gyuri</a>
               </li>
                        <li class="nav-item">
-                <a class="nav-link" href="Levi.html">Levi</a>
+                <a class="nav-link" href="Levi1.html">Levi</a>
               </li>  
               <li class="nav-item">
-                <a class="nav-link" href="Levi.html">Levi2</a>
+                <a class="nav-link" href="Levi2.html">Levi2</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="Mark1.html">Mark2</a>
