--- a/Projekt2/Mark2.html
+++ b/Projekt2/Mark2.html
@@ -39,7 +39,7 @@
           </div>
         </div>          
       </nav>
-      <div id="container" class="container">
+      <div class="container">
 
 
 
@@ -47,5 +47,5 @@
 
 
 
-
+      </div>
     </div>
