--- a/Projekt2/Gyuri1.html
+++ b/Projekt2/Gyuri1.html
@@ -14,7 +14,7 @@
    
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <div  class="container-fluid">
-          <a class="navbar-brand" href="index.html"><img src="" alt="" style="width:40px;" class="rounded-pill"> </a>
+          <a class="navbar-brand" href="index.html"><img src="logo_bkv.jpg" alt="vissza a főoldalra" style="width:40px;" class="rounded-pill"> </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
