--- a/Kezilabda/Levi.html
+++ b/Kezilabda/Levi.html
@@ -23,22 +23,22 @@
               <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" href="Mark.html">Márk</a>
+                    <a class="nav-link" href="Mark.html">Kézilabda történelme</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="Gyuri.html">Gyuri</a>
+                    <a class="nav-link" href="Gyuri.html">Játék szabályok</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="Gyuri2.html">Gyuri2</a>
+                    <a class="nav-link" href="Gyuri2.html">Alapszabályok</a>
                   </li>    
                   <li class="nav-item">
-                    <a class="nav-link" href="Levi.html">Levi</a>
+                    <a class="nav-link" href="Levi.html">Kézilabda csapat</a>
                   </li>  
                   <li class="nav-item">
                     <a class="nav-link" href="Levi.html">Levi2</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="Mark1.html">Mark2</a>
+                    <a class="nav-link" href="Mark1.html">Kézilabda magyar történelme</a>
                   </li>          
                 </ul>
               </div>
