--- a/Projekt2/index.html
+++ b/Projekt2/index.html
@@ -10,8 +10,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <p class="text-center">Vízszíntes navigátor bár</p>
+    <div id="cont" class="container">
+        <p class="text-center"> Tömegközlekedés</p>
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="index.html"><img src="logo_bkv.jpg" alt="" style="width:40px;" class="rounded-pill"> </a>
@@ -39,6 +39,9 @@
               </div>
             </div>          
           </nav>
+          <div class="row">
+
+          </div>
 
 
     </div>
