--- a/Projekt2/Gyuri.html
+++ b/Projekt2/Gyuri.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div id="cont" class="container">
         <p class="text-center">Vízszíntes navigátor bár</p>
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <div class="container-fluid">
