--- a/Projekt2/Mark1.html
+++ b/Projekt2/Mark1.html
@@ -13,8 +13,8 @@
 </head>
 
 <body>
-  <div class="container">
-    <p class="text-center">Vízszíntes navigátor bár</p>
+  <div id="cont" class="container">
+    <h1 class="text-center">Buszmenetrend</h1>
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html"><img src="logo_bkv.jpg" alt="" style="width:40px;"
@@ -45,32 +45,36 @@
     </nav>
 
     <div>
-      <div>
-        <img src="busz.jpg" alt="">
+      <div class="row">
+        <div class="col-7 text-center">
+          <img id="mkép" src="busz.jpg" alt="">
+        </div>
+        <div class="col-5">
+          <ul id="margin">
+            <li>Budapest–Dunakeszi–Vác300, 302, 303 Füzetbe</li>
+            <li>Göd–Dunakeszi, Barátság u.–Budapest301 Füzetbe</li>
+            <li>Budapest–Dunakeszi, Auchan–Dunakeszi, Horányi rév305-306 Füzetbe</li>
+            <li>Budapest–Dunakeszi–Fót–Budapest308-309 Füzetbe</li>
+            <li>Budapest–Fót–Dunakeszi–Budapest310-311 Füzetbe</li>
+            <li>Budapest–Rád–Penc–Nézsa312 Füzetbe</li>
+            <li>Budapest–Őrbottyán–Vácrátót–Püspökszilágy313 Füzetbe</li>
+            <li>Budapest–Őrbottyán–Vácrátót–Vácduka–Vác314 Füzetbe</li>
+            <li>Budapest–Őrbottyán–Váchartyán–Püspökszilágy315 Füzetbe</li>
+            <li>Budapest–Őrbottyán–Galgagyörk–Acsa–Bercel/Nógrádkövesd316 Füzetbe</li>
+            <li>Gödöllő–Mogyoród–Fót–Budapest317 Füzetbe</li>
+            <li>Budapest–Fót–Veresegyház–Galgamácsa318-319 Füzetbe</li>
+            <li>Budapest–Fót–Mogyoród320 Füzetbe</li>
+            <li>Budapest–HUNGARORING–Mogyoród321 Füzetbe</li>
+            <li>Budapest–Szada–Veresegyház–Őrbottyán396-399 Füzetbe</li>
+            <li>Budapest–Gödöllő–Bag–Tura400, 402 Füzetbe</li>
+            <li>Budapest–Gödöllő–Hatvan410, 412 Füzetbe</li>
+            <li>Budapest–Hatvan–Boldog–Jászfényszaru414 Füzetbe</li>
+            <li>Budapest–Gödöllő–Aszód–Verseg–Kálló–Erdőkürt422, 424 Füzetbe</li>
+            <li>Budapest–Aszód–Szirák–Bér430, 438 Füzetbe</li>
+            <li>Budapest–Aszód–Szirák–Buják432, 434, 435 Füzetbe</li>
+          </ul>
+        </div>
       </div>
-      <ul>
-        <li>Budapest–Dunakeszi–Vác300, 302, 303 Füzetbe</li>
-        <li>Göd–Dunakeszi, Barátság u.–Budapest301 Füzetbe</li>
-        <li>Budapest–Dunakeszi, Auchan–Dunakeszi, Horányi rév305-306 Füzetbe</li>
-        <li>Budapest–Dunakeszi–Fót–Budapest308-309 Füzetbe</li>
-        <li>Budapest–Fót–Dunakeszi–Budapest310-311 Füzetbe</li>
-        <li>Budapest–Rád–Penc–Nézsa312 Füzetbe</li>
-        <li>Budapest–Őrbottyán–Vácrátót–Püspökszilágy313 Füzetbe</li>
-        <li>Budapest–Őrbottyán–Vácrátót–Vácduka–Vác314 Füzetbe</li>
-        <li>Budapest–Őrbottyán–Váchartyán–Püspökszilágy315 Füzetbe</li>
-        <li>Budapest–Őrbottyán–Galgagyörk–Acsa–Bercel/Nógrádkövesd316 Füzetbe</li>
-        <li>Gödöllő–Mogyoród–Fót–Budapest317 Füzetbe</li>
-        <li>Budapest–Fót–Veresegyház–Galgamácsa318-319 Füzetbe</li>
-        <li>Budapest–Fót–Mogyoród320 Füzetbe</li>
-        <li>Budapest–HUNGARORING–Mogyoród321 Füzetbe</li>
-        <li>Budapest–Szada–Veresegyház–Őrbottyán396-399 Füzetbe</li>
-        <li>Budapest–Gödöllő–Bag–Tura400, 402 Füzetbe</li>
-        <li>Budapest–Gödöllő–Hatvan410, 412 Füzetbe</li>
-        <li>Budapest–Hatvan–Boldog–Jászfényszaru414 Füzetbe</li>
-        <li>Budapest–Gödöllő–Aszód–Verseg–Kálló–Erdőkürt422, 424 Füzetbe</li>
-        <li>Budapest–Aszód–Szirák–Bér430, 438 Füzetbe</li>
-        <li>Budapest–Aszód–Szirák–Buják432, 434, 435 Füzetbe</li>
-      </ul>
     </div>
   </div>
 
