--- a/Projekt2/index.html
+++ b/Projekt2/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menetrend</title>
+    <link rel="icon" type="image/x-icon" href="logo_bkv.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="style.css">
@@ -12,6 +13,7 @@
 <body>
     <div id="cont" class="container">
     <h1 class="text-center"> Tömegközlekedés </h1>   
+   
         <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="index.html"><img src="logo_bkv.jpg" alt="" style="width:40px;" class="rounded-pill"> </a>
