--- a/Projekt2/Mark1.html
+++ b/Projekt2/Mark1.html
@@ -46,10 +46,10 @@
 
     <div>
       <div class="row">
-        <div class="col-7 text-center">
+        <div class="col-6 text-center">
           <img id="mkép" src="busz.jpg" alt="">
         </div>
-        <div class="col-5">
+        <div class="col-6">
           <ul id="margin">
             <li>Budapest–Dunakeszi–Vác300, 302, 303 Füzetbe</li>
             <li>Göd–Dunakeszi, Barátság u.–Budapest301 Füzetbe</li>
@@ -76,8 +76,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-5">
-          <ul>
+        <div class="col-6">
+          <ul id="margin2">
             <li>Budapest–Aszód–Vanyarc–Bér/Buják436, 437 Füzetbe</li>
             <li>Budapest–Aszód–Palotás–Hollókő439 Füzetbe</li>
             <li>Budapest–Gödöllő–Tóalmás440 Füzetbe</li>
@@ -100,7 +100,7 @@
             <li>Budapest–Dabas–Kunpeszér629 Füzetbev
           </ul>
         </div>
-        <div class="col-7">
+        <div class="col-6">
           <img id="mkép" src="budabusz.jpg" alt="">
         </div>
       </div>
