--- a/Projekt2/index.html
+++ b/Projekt2/index.html
@@ -23,13 +23,13 @@
               <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" href="Mark.html">Mark</a>
+                    <a class="nav-link" href="Mark.html">Buszok</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="Gyuri.html">Gyuri</a>
+                    <a class="nav-link" href="Gyuri.html">Villamos</a>
                   </li>
                  <li class="nav-item">
-                    <a class="nav-link" href="Levi.html">Levi</a>
+                    <a class="nav-link" href="Levi.html">Repülők</a>
                   </li>  
                   <li class="nav-item">
                     <a class="nav-link" href="Levi2.html">Levi2</a>
