--- a/Projekt2/brit.html
+++ b/Projekt2/brit.html
@@ -39,70 +39,27 @@
               </div>
             </div>          
           </nav>
-         <br>
-         <br>
+         
           <div class="row">
             <img src="bkvsáv.png" alt="">
           </div>
-          <br>
-          <br>
           <div class="row">
-            <h2 class="text-center">Repülő menetrendek</h2>
-            <hr>
-            <br>
-            <br>
-            <h4>Környező országaink</h4>
-            <br>
-            <br>
-            <table class="table table-bordered border-dark text-center">
-              <thead>
-                <tr>
-                  <td><a href="Nemet.html">Németország</a></td>
-                  <td><a href="olasz.html">Olaszország</a></td>
-                  <td><a href="spanyol.html">Spanyolország</a></td> 
-                  <td><a href="francia.html">Franciaország</a></td>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td><a href="gorog.html">Görögország</a></td>
-                  <td><a href="lengyel.html">Lengyelország</a></td>
-                  <td><a href="brit.html"> Nagy Britania</a></td>
-                  <td><a href="holland.html">Hollandia</a> </td>
-                </tr>
-              </tbody>
-            </table>
-        </div>
-        <br>
-        <br>
-        <div class="row">
-          <h3>Légitársaságaink</h3>
-          <hr>
-          <div class="col-6">
-          <ul>
-            <li>Wizz Air</li>
-            <li>Ryanair</li>
-            <li>Swiss</li>
-            <li>Iberia</li>
-            <li>LOT</li>
-            <li>Jet2.com</li>
-            <li>Easy Jet</li>
-          </ul>
-          </div>
-          <div class="col-6">
+            <h2>Nagy Britaniai menetrendek</h2>
             <ul>
-              <li>Air France</li>
-              <li>Air Canada</li>
-              <li>TAP Portual</li>
-              <li>Qantas</li>
-              <li>Emirates</li>
-              <li>Norwegian</li>
-              <li>Singapore Airlines</li>
+                <li>12:35	London	Lufthansa	LH1676	2B	Várható 12:43	</li>
+                <li>12:35	London	Air Canada	AC9032	2B	Várható 12:43</li>	
+                <li>12:35	London	TAP Portugal	TP7980	2B	Várható 12:43</li>	
+                <li>12:35	London	United Airlines	UA9038	2B	Várható 12:43</li>	
+                <li>16:10	London	Lufthansa	LH1678	2B	Várható	</li>
+                <li>16:10	London	TAP Portugal	TP7970	2B	Várható	</li>
+                <li>16:10	London	United Airlines	UA8857	2B	Várható	</li>
+                <li>23:25	London	Lufthansa	LH1682	2B	Várható	</li>
+                <li>23:25	London	TAP Portugal	TP7972	2B	Várható	</li>
+                <li>23:25	London	United Airlines	UA9053	2B	Várható	</li>
+                <li>23:25   London	SAS	SK3137	2B	Várható</li>
             </ul>
 
           </div>
-
-        </div>
   
       
     </div>
