--- a/Projekt2/olasz.html
+++ b/Projekt2/olasz.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="Gyuri.html">Gyuri</a>
                   </li>
                  <li class="nav-item">
-                    <a class="nav-link" href="Levi.html">Levi</a>
+                    <a class="nav-link" href="Levi.html">Repülés</a>
                   </li>  
                   <li class="nav-item">
                     <a class="nav-link" href="Levi2.html">Levi2</a>
@@ -43,6 +43,27 @@
           <div class="row">
             <img src="bkvsáv.png" alt="">
           </div>
+          <h4>Környező országaink</h4>
+            <br>
+            <br>
+            <table class="table table-bordered border-dark text-center">
+              <thead>
+                <tr>
+                  <td><a href="Nemet.html">Németország</a></td>
+                  <td><a href="olasz.html">Olaszország</a></td>
+                  <td><a href="spanyol.html">Spanyolország</a></td> 
+                  <td><a href="francia.html">Franciaország</a></td>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><a href="gorog.html">Görögország</a></td>
+                  <td><a href="lengyel.html">Lengyelország</a></td>
+                  <td><a href="brit.html"> Nagy Britania</a></td>
+                  <td><a href="holland.html">Hollandia</a> </td>
+                </tr>
+              </tbody>
+            </table>
           <div class="row">
             <h2>Olaszországi menetrendek</h2>
             <ul>
