--- a/Projekt2/Gyuri.html
+++ b/Projekt2/Gyuri.html
@@ -43,7 +43,7 @@
           </nav>
          
           <div class="row">
-            <img src="bkvsáv.png" alt="">
+            <img src="bkvsávkicsi.png" alt="">
           </div>
   
       
