--- a/Projekt2/spanyol.html
+++ b/Projekt2/spanyol.html
@@ -45,8 +45,7 @@
           </div>
           <h4>Környező országaink</h4>
             <br>
-            <br>
-            <table class="table table-bordered border-dark text-center">
+            <table id="table" class="table table-bordered border-dark text-center">
               <thead>
                 <tr>
                   <td><a href="Nemet.html">Németország</a></td>
@@ -66,7 +65,7 @@
             </table>
           <div class="row">
             <h2>Franciaországi menetrendek</h2>
-            <ul>
+            <ul id="ul">
                 <li>12:35	Madrid	Lufthansa	LH1676	2B	Várható 12:43	</li>
                 <li>12:35	Madrid	Air Canada	AC9032	2B	Várható 12:43</li>	
                 <li>12:35	Madrid	TAP Portugal	TP7980	2B	Várható 12:43</li>	
