--- a/Projekt2/Gyuri.html
+++ b/Projekt2/Gyuri.html
@@ -29,7 +29,7 @@
                     <a class="nav-link" href="Gyuri.html">Villamos</a>
                   </li>
                  <li class="nav-item">
-                    <a class="nav-link" href="Levi.html">Repülők</a>
+                    <a class="nav-link" href="Levi.html">Repülés</a>
                   </li>  
                   <li class="nav-item">
                     <a class="nav-link" href="Levi2.html">Levi2</a>
