--- a/Projekt2/Levi.html
+++ b/Projekt2/Levi.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="Gyuri.html">Gyuri</a>
                   </li>
                  <li class="nav-item">
-                    <a class="nav-link" href="Levi.html">Levi</a>
+                    <a class="nav-link" href="Levi.html">Repülés</a>
                   </li>  
                   <li class="nav-item">
                     <a class="nav-link" href="Levi2.html">Levi2</a>
@@ -52,7 +52,6 @@
             <br>
             <br>
             <h4>Környező országaink</h4>
-            <br>
             <br>
             <table class="table table-bordered border-dark text-center">
               <thead>
