--- a/Projekt2/Levi.html
+++ b/Projekt2/Levi.html
@@ -53,7 +53,7 @@
             <br>
             <h4>Környező országaink</h4>
             <br>
-            <table class="table table-bordered border-dark text-center">
+            <table id="table" class="table table-bordered border-dark text-center">
               <thead>
                 <tr>
                   <td><a href="Nemet.html">Németország</a></td>
