--- a/Projekt2/Mark1.html
+++ b/Projekt2/Mark1.html
@@ -25,19 +25,19 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="Mark.html"></a>
+              <a class="nav-link" href="Mark.html">Márk</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Gyuri.html"></a>
+              <a class="nav-link" href="Gyuri.html">Gyuri</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Levi.html"></a>
+              <a class="nav-link" href="Levi.html">Levi</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Levi2.html"></a>
+              <a class="nav-link" href="Levi2.html">Levi2</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Mark1.html"></a>
+              <a class="nav-link" href="Mark1.html">Mark2</a>
             </li>
           </ul>
         </div>
@@ -104,6 +104,9 @@
           <img id="mkép" src="budabusz.jpg" alt="">
         </div>
       </div>
+    </div>
+    <div class="row text-center">
+      <h1>Buszjáratok</h1>
     </div>
   </div>
 
