--- a/Projekt2/holland.html
+++ b/Projekt2/holland.html
@@ -65,6 +65,7 @@
             </table>
           <div class="row">
             <h2>Hollandiai menetrendek</h2>
+            <div class="col-6">
             <ul id="ul">
                 <li>12:35	Amsterdam	Lufthansa	LH1676	2B	Várható 12:43	</li>
                 <li>12:35	Amsterdam	Air Canada	AC9032	2B	Várható 12:43</li>	
@@ -78,6 +79,23 @@
                 <li>23:25	Amsterdam	United Airlines	UA9053	2B	Várható	</li>
                 <li>23:25	MAmsterdam	SAS	SK3137	2B	Várható</li>
             </ul>
+          </div>
+          <div class="col-6">
+            <ul id="ul">
+                <li>12:35	Amsterdam	Lufthansa	LH1676	2B	Várható 12:43	</li>
+                <li>12:35	Amsterdam	Air Canada	AC9032	2B	Várható 12:43</li>	
+                <li>12:35	Amsterdam	TAP Portugal	TP7980	2B	Várható 12:43</li>	
+                <li>12:35	Amsterdam	United Airlines	UA9038	2B	Várható 12:43</li>	
+                <li>16:10	Amsterdam	Lufthansa	LH1678	2B	Várható	</li>
+                <li>16:10	Amsterdam	TAP Portugal	TP7970	2B	Várható	</li>
+                <li>16:10	Amsterdam	United Airlines	UA8857	2B	Várható	</li>
+                <li>23:25	Amsterdam	Lufthansa	LH1682	2B	Várható	</li>
+                <li>23:25	Amsterdam	TAP Portugal	TP7972	2B	Várható	</li>
+                <li>23:25	Amsterdam	United Airlines	UA9053	2B	Várható	</li>
+                <li>23:25	Amsterdam	SAS	SK3137	2B	Várható</li>
+            </ul>
+          </div>
+
 
           </div>
   
