--- a/Projekt2/francia.html
+++ b/Projekt2/francia.html
@@ -65,6 +65,7 @@
             </table>
           <div class="row">
             <h2>Franciaországi menetrendek</h2>
+            <div class="col-6">
             <ul id="ul">
                 <li>12:35	Paris	Lufthansa	LH1676	2B	Várható 12:43	</li>
                 <li>12:35	Paris	Air Canada	AC9032	2B	Várható 12:43</li>	
@@ -78,6 +79,23 @@
                 <li>23:25	Paris	United Airlines	UA9053	2B	Várható	</li>
                 <li>23:25	Paris	SAS	SK3137	2B	Várható</li>
             </ul>
+          </div>
+          <div class="col-6">
+            <ul id="ul">
+                <li>12:35	Paris	Lufthansa	LH1676	2B	Várható 12:43	</li>
+                <li>12:35	Paris	Air Canada	AC9032	2B	Várható 12:43</li>	
+                <li>12:35	Paris	TAP Portugal	TP7980	2B	Várható 12:43</li>	
+                <li>12:35	Paris	United Airlines	UA9038	2B	Várható 12:43</li>	
+                <li>16:10	Paris	Lufthansa	LH1678	2B	Várható	</li>
+                <li>16:10	Paris	TAP Portugal	TP7970	2B	Várható	</li>
+                <li>16:10	Paris	United Airlines	UA8857	2B	Várható	</li>
+                <li>23:25	Paris	Lufthansa	LH1682	2B	Várható	</li>
+                <li>23:25	Paris	TAP Portugal	TP7972	2B	Várható	</li>
+                <li>23:25	Paris	United Airlines	UA9053	2B	Várható	</li>
+                <li>23:25	Paris	SAS	SK3137	2B	Várható</li>
+            </ul>
+          </div>
+
 
           </div>
   
