--- a/Projekt2/Alstom METROPOLIS.html
+++ b/Projekt2/Alstom METROPOLIS.html
@@ -58,7 +58,9 @@
     </div>
     <br>
     <div class="row text-center">
-      <p> <img id="altsom" src="metro1.jpg" alt=""></p>
+      <div class="col-2"></div>
+     <div class="col-8">  <p> <img id="altsom" src="metro1.jpg" alt=""></p> </div> 
+      <div class="col-2"></div>
     </div>
     <div id="metabla" class="row">
       <table class="table">
