--- a/Projekt2/Alstom METROPOLIS.html
+++ b/Projekt2/Alstom METROPOLIS.html
@@ -96,6 +96,14 @@
          </tbody>
      </table>
     </div>
+    <div class="row">
+     <div class="col-1">
+     <img id="vissza" src="visszanyil.webp" alt="">
+     </div>
+     <div class="col-11">
+
+     </div>
+    </div>
 
 
 
