--- a/Projekt2/Alstom METROPOLIS.html
+++ b/Projekt2/Alstom METROPOLIS.html
@@ -98,7 +98,7 @@
     </div>
     <div class="row">
      <div class="col-1">
-     <img id="vissza" src="visszanyil.webp" alt="">
+    <a href="Gyuri.html"><img id="vissza" src="visszanyil.webp"  alt=""></a>
      </div>
      <div class="col-11">
 
