--- a/Projekt2/Levi.html
+++ b/Projekt2/Levi.html
@@ -21,10 +21,10 @@
               <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" href="Mark.html">Mark</a>
+                    <a class="nav-link" href="Mark2.html">Márk2</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="Gyuri.html">Gyuri</a>
+                    <a class="nav-link" href="Gyuri.html">Metró</a>
                   </li>
                  <li class="nav-item">
                     <a class="nav-link" href="Levi.html">Repülés</a>
@@ -33,7 +33,7 @@
                     <a class="nav-link" href="Levi2.html">Levi2</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="Mark1.html">Mark2</a>
+                    <a class="nav-link" href="Mark1.html">Mar1</a>
                   </li>          
                 </ul>
               </div>
