--- a/Projekt2/Mark1.html
+++ b/Projekt2/Mark1.html
@@ -108,6 +108,31 @@
     <div class="row text-center">
       <h1>Buszjáratok</h1>
     </div>
+    <div>
+      <ul id="margin2"  >
+        <li>Budapest, Újpest-Városkapu XIII. ker.  	04:50	05:20	05:50	06:20	06:50	06:55	07:20</li>
+        <li> Budapest, Károlyi István u.	04:52	05:22	05:52	06:22	06:52	06:57	07:22</li>
+        <li> Budapest, Zsilip utca	04:53	05:23	05:53	06:23	06:53	06:58	07:23</li>
+        <li>Budapest, Tungsram	04:54	05:24	05:55	06:25	06:55	07:00	07:25</li>
+        <li>Budapest, Fóti út	04:55	05:25	05:57	06:27	06:57	07:02	07:27</li>
+        <li>Budapest, Ungvári u.	04:56	05:26	05:58	06:28	06:58	07:03	07:28</li>
+        <li> Budapest, Bagaria u.	04:57	05:27	05:59	06:29	06:59	07:04	07:29</li>
+        <li> Budapest, Vízművek	04:59	05:29	06:01	06:31	07:01	S	07:31</li>
+        <li> Budapest, Székesdűlő	05:01	05:31	06:03	06:34	07:04	S	07:34</li>
+        <h3> <u> Budapest-bérlet szakaszhatár </u> </h3>	 	 	 	 	 	 	 
+        <li>Dunakeszi, Székesdűlő ipartelep	05:02	05:32	06:04	06:36	07:06	S	07:36</li>
+        <li>Dunakeszi, Vízművek bej. út	05:04	05:34	06:05	06:37	07:07	S	07:37</li>
+        <li>Dunakeszi, vh.	05:06	05:36	06:08	06:40	07:10	07:20	07:40</li>
+        <li> Dunakeszi, Szakorvosi Rendelő	05:07	05:37	06:09	06:41	07:11	07:21	07:41</li>
+        <li>Dunakeszi, benzinkút	05:08	05:38	06:10	06:42	07:12	07:22	07:42</li>
+          <li>Dunakeszi, templom	05:09	05:39	06:11	06:44	07:14	07:24	07:44</li>
+          <li> Dunakeszi, Liget u.	05:10	05:40	06:12	06:45	07:15	07:25	07:45</li>
+         <li>Dunakeszi, sportpálya	05:11	05:41	06:13	06:46	07:16	07:26	07:46</li>
+      </ul>
+    </div>
+    <div class="text-center">
+      <img src="térkép.jpg" alt="">
+    </div>
   </div>
 
 </body>
